--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -12,6 +12,9 @@
      <style name="SpinnerItem" parent="Theme.AppCompat.Light.NoActionBar">>
         <item name="android:textSize">18dp</item>
     </style>
+    <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
+         <item name="android:windowBackground">@drawable/background_splash</item>
+      </style>
     <style name="SpinnerDropDownItem" parent="Theme.AppCompat.Light.NoActionBar">>
         <item name="android:textColor">#ffffff</item>
         <item name="android:textSize">16dp</item>
