--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -16,7 +16,7 @@
          <item name="android:windowBackground">@drawable/background_splash</item>
       </style>
     <style name="SpinnerDropDownItem" parent="Theme.AppCompat.Light.NoActionBar">>
-        <item name="android:textColor">#ffffff</item>
+        <item name="android:textColor">#000000</item>
         <item name="android:textSize">16dp</item>
         <item name="android:gravity">center</item>
         <item name="android:background">@drawable/mydivider</item>
